// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when archived courses are expanded 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded={[Function Boolean]}
  isCopyingCourse="false"
  isLoadingActiveCourses={[Function Boolean]}
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when courses are still loading 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses={[Function Boolean]}
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll="false"
  canRestoreAll="false"
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses="false"
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <div>
        <div>
          <div
            class="table table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
              id="active-courses-table"
            >
              <thead>
                <tr
                  class="bg-primary text-white"
                >
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-id"
                  >
                    <button>
                       Course ID 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-name"
                  >
                    <button>
                       Course Name 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="ascending"
                    class="sortable-header"
                    id="sort-creation-date"
                  >
                    <button>
                       Creation Date 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                        <i
                          class="fas fa-sort-up"
                        />
                      </span>
                    </button>
                  </th>
                  <th>
                    Sections
                  </th>
                  <th>
                    Teams
                  </th>
                  <th>
                    Total Students
                  </th>
                  <th>
                    Total Unregistered
                  </th>
                  <th
                    class="text-center"
                  >
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-0"
                  >
                    CS3281
                  </td>
                  <td
                    class="text-break"
                  >
                    Modifiable Students and Courses
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       5 Nov 2018 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <a
                      class="btn btn-light btn-sm custom-button-active"
                      href="/web/instructor/courses/enroll?courseid=CS3281"
                      id="btn-enroll-0"
                      ngbtooltip="Enroll student into the course"
                      tmrouterlink="/web/instructor/courses/enroll"
                    >
                       Enroll 
                    </a>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-0"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-copy-0"
                          ngbtooltip="Copy the course and its corresponding sessions"
                          placement="left"
                        >
                           Copy 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-0"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-soft-delete-0"
                          ngbtooltip="Delete the course and its corresponding students and sessions"
                          placement="left"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-1"
                  >
                    CS3282
                  </td>
                  <td
                    class="text-break"
                  >
                    Nothing modifiable
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       2 Feb 2019 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <button
                      class="btn btn-light btn-sm disabled"
                      id="btn-enroll-disabled-1"
                    >
                       Enroll 
                    </button>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-1"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-1"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item disabled"
                          id="btn-soft-delete-disabled-1"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when new course form is expanded 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded={[Function Boolean]}
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses="false"
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <div>
        <div
          class="alert alert-warning margin-top-30px"
          role="alert"
        >
           You do not seem to have any active courses. Use the button above to create a new course. 
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses="false"
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <div>
        <div>
          <div
            class="table table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
              id="active-courses-table"
            >
              <thead>
                <tr
                  class="bg-primary text-white"
                >
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-id"
                  >
                    <button>
                       Course ID 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-name"
                  >
                    <button>
                       Course Name 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="ascending"
                    class="sortable-header"
                    id="sort-creation-date"
                  >
                    <button>
                       Creation Date 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                        <i
                          class="fas fa-sort-up"
                        />
                      </span>
                    </button>
                  </th>
                  <th>
                    Sections
                  </th>
                  <th>
                    Teams
                  </th>
                  <th>
                    Total Students
                  </th>
                  <th>
                    Total Unregistered
                  </th>
                  <th
                    class="text-center"
                  >
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-0"
                  >
                    CS3281
                  </td>
                  <td
                    class="text-break"
                  >
                    Modifiable Students and Courses
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       5 Nov 2018 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td>
                    <span>
                       1 
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <a
                      class="btn btn-light btn-sm custom-button-active"
                      href="/web/instructor/courses/enroll?courseid=CS3281"
                      id="btn-enroll-0"
                      ngbtooltip="Enroll student into the course"
                      tmrouterlink="/web/instructor/courses/enroll"
                    >
                       Enroll 
                    </a>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-0"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-copy-0"
                          ngbtooltip="Copy the course and its corresponding sessions"
                          placement="left"
                        >
                           Copy 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-0"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-soft-delete-0"
                          ngbtooltip="Delete the course and its corresponding students and sessions"
                          placement="left"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-1"
                  >
                    CS3282
                  </td>
                  <td
                    class="text-break"
                  >
                    Nothing modifiable
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       2 Feb 2019 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td>
                    <span>
                       2 
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <button
                      class="btn btn-light btn-sm disabled"
                      id="btn-enroll-disabled-1"
                    >
                       Enroll 
                    </button>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-1"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-1"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item disabled"
                          id="btn-soft-delete-disabled-1"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses={[Function Boolean]}
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoadingActiveCourses="false"
  isLoadingArchivedCourses={[Function Boolean]}
  isLoadingSoftDeletedCourses={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function _NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div
      class="course-section"
    >
      <h2
        class="h3"
      >
        Active courses
      </h2>
      <div>
        <div>
          <div
            class="table table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
              id="active-courses-table"
            >
              <thead>
                <tr
                  class="bg-primary text-white"
                >
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-id"
                  >
                    <button>
                       Course ID 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="sortable-header"
                    id="sort-course-name"
                  >
                    <button>
                       Course Name 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="ascending"
                    class="sortable-header"
                    id="sort-creation-date"
                  >
                    <button>
                       Creation Date 
                      <span
                        aria-hidden="true"
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                        <i
                          class="fas fa-sort-up"
                        />
                      </span>
                    </button>
                  </th>
                  <th>
                    Sections
                  </th>
                  <th>
                    Teams
                  </th>
                  <th>
                    Total Students
                  </th>
                  <th>
                    Total Unregistered
                  </th>
                  <th
                    class="text-center"
                  >
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-0"
                  >
                    CS3281
                  </td>
                  <td
                    class="text-break"
                  >
                    Modifiable Students and Courses
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       5 Nov 2018 
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                        id="show-statistics-0"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <a
                      class="btn btn-light btn-sm custom-button-active"
                      href="/web/instructor/courses/enroll?courseid=CS3281"
                      id="btn-enroll-0"
                      ngbtooltip="Enroll student into the course"
                      tmrouterlink="/web/instructor/courses/enroll"
                    >
                       Enroll 
                    </a>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-0"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3281"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-copy-0"
                          ngbtooltip="Copy the course and its corresponding sessions"
                          placement="left"
                        >
                           Copy 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-0"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-soft-delete-0"
                          ngbtooltip="Delete the course and its corresponding students and sessions"
                          placement="left"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                    id="course-id-1"
                  >
                    CS3282
                  </td>
                  <td
                    class="text-break"
                  >
                    Nothing modifiable
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                      container="body"
                    >
                       2 Feb 2019 
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                        id="show-statistics-1"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td>
                    <span>
                      <button
                        class="link-button"
                      >
                         Show 
                      </button>
                    </span>
                  </td>
                  <td
                    class="text-center actions-cell"
                  >
                    <button
                      class="btn btn-light btn-sm disabled"
                      id="btn-enroll-disabled-1"
                    >
                       Enroll 
                    </button>
                    <div
                      class="d-inline-block dropdown"
                      ngbdropdown=""
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-light btn-sm custom-button-active"
                        id="btn-other-actions-1"
                        ngbdropdowntoggle=""
                      >
                        Other Actions
                      </button>
                      <div
                        class="dropdown-menu"
                        ngbdropdownmenu=""
                      >
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/details?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/details"
                        >
                           View 
                        </a>
                        <a
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          href="/web/instructor/courses/edit?courseid=CS3282"
                          tmrouterlink="/web/instructor/courses/edit"
                        >
                           Edit 
                        </a>
                        <button
                          class="btn btn-primary btn-sm dropdown-item clickable"
                          container="body"
                          id="btn-archive-1"
                          ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                          placement="left"
                        >
                           Archive 
                        </button>
                        <button
                          class="btn btn-primary btn-sm dropdown-item disabled"
                          id="btn-soft-delete-disabled-1"
                        >
                           Delete 
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h2
      class="h3 text-muted"
    >
      <span
        aria-hidden="true"
        class="fa fa-file-archive"
      />
       Archived courses 
    </h2>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="h3 text-muted"
      >
        <span
          aria-hidden="true"
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h2>
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
  </div>
</tm-instructor-courses-page>
`;
